metadata/20180627-231412-retrieveXML/src/objects/Container__c.object
<CustomObject>
    <description>This object tracks containers</description>
    <fields>
        <fullName>Depth__c</fullName>
        <inlineHelpText>Please enter the value in meters</inlineHelpText>
        <label>Depth</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <inlineHelpText>Please enter the value in meters</inlineHelpText>
        <label>Height</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>RFID tags can be either passive, active or battery-assisted passive</inlineHelpText>
        <label>RFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <formula>Height__c * Depth__c * Width__c</formula>
        <inlineHelpText>Expressed in cubic-meters</inlineHelpText>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <inlineHelpText>Please enter the value in meters</inlineHelpText>
        <label>Width</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Container</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DimensionComplete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(
    AND(
      ISBLANK(Height__c),
      ISBLANK(Width__c),
      ISBLANK(Depth__c)
    )
  ),
  NOT(
    AND(
      NOT(ISBLANK(Height__c)),
      NOT(ISBLANK(Width__c)),
      NOT(ISBLANK(Depth__c))
    )
  )
)</errorConditionFormula>
        <errorMessage>You must enter the full dimension or not at all</errorMessage>
    </validationRules>
</CustomObject>